--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/static/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
     <title>Hack SRM AP</title>
   </head>
   <body>
