[feat] update code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/static/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>HackSRM AP</title>
+    <title>HackSRM</title>
     <meta name="title" content="HackSRM AP" />
     <meta
       name="description"
